# interlocks

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INTERLOCKS_NPM_SPEC.md  PYPI_RELEASE_CHECKLIST.md  README.md  SECURITY.md  STRATEGY.md  action.yml  lint_fix_harness_SPEC.md  pyproject.toml
.claude/: settings.json
.claude/scratch/: acceptance-criteria.md  architecture.md  change-plan.md  eval-architecture.md  eval-inventory.md  eval-product.md  eval-qa.md  ground-truth.md  jtbd-and-faq.md  onboarding-flow.md  simplify-diff.patch  simplify-untracked.txt
.github/workflows/: ci.yml  nightly.yml  release-mutmut.yml  release.yml  website.yml
.interlocks/: acceptance_budget.json  trace.json
docs/: index.html
harness/: cli.py  config.py  defaults_path.py  detect.py  git.py  metrics.py  paths.py  pyproject_edit.py  runner.py  ui.py
harness/defaults/: bdd_conftest.py  bdd_example.feature  bdd_test_example.py  coveragerc  ruff.toml  scaffold_pyproject.toml  scaffold_test_example.py
harness/reports/: suppressions.py
harness/stages/: check.py  ci.py  clean.py  nightly.py  post_edit.py  pre_commit.py  setup_hooks.py
harness/tasks/: _ruff.py  acceptance.py  arch.py  audit.py  complexity.py  coverage.py  crap.py  deps.py  doctor.py  fix.py  format.py  format_check.py  init.py  init_acceptance.py  lint.py  mutation.py  stats.py  test.py  typecheck.py
interlocks/: __init__.py  acceptance_budget.py  acceptance_status.py  acceptance_symbols.py  acceptance_trace.py  baseline.py  behavior_attribution.py  behavior_attribution_trace.py  behavior_attribution_validate.py  behavior_coverage.py  cli.py  command_docs.py  config.py  defaults_path.py  detect.py  git.py  hook_setup.py  metrics.py  pyproject_edit.py  run_summary.py  runner.py  setup_state.py  skip.py  task_labels.py  ui.py
interlocks/crash/: boundary.py  payload.py  prompt.py  storage.py  transport.py
interlocks/defaults/: agents_block.md  github_workflow.yml  github_workflow_advance.yml  importlinter_layered.ini  pyrightconfig.json  ruff.toml  scaffold_pyproject.toml  tools.in  tools.py
interlocks/defaults/skill/: SKILL.md
interlocks/lintfix/: __init__.py  budgets.py  classify.py  diff.py  discover.py  eof_newline.py  escrow.py  optimize.py  plan.py  replay.py  rules.py  simulate.py  stats.py  verify.py
interlocks/reports/: suppressions.py
interlocks/stages/: check.py  ci.py  clean.py  nightly.py  post_edit.py  pre_commit.py
interlocks/tasks/: _ruff.py  acceptance.py  agents.py  arch.py  audit.py  baseline_cmd.py  behavior_attribution.py  complexity.py  config.py  coverage.py  crap.py  deps.py  deps_freshness.py  doctor.py  evaluate.py  explain.py  fix.py  fix_annotate.py  fix_metrics.py  fix_optimize.py  fix_plan.py  fix_replay.py  fix_rule.py  format.py  format_check.py  lint.py  mutation.py  setup.py  setup_skill.py  stats.py  typecheck.py  warm.py
pyharness/website/: vercel.json
tests/: conftest.py  test_acceptance_attribution_wrap.py  test_acceptance_budget.py  test_acceptance_status.py  test_acceptance_trace.py  test_adoption_friction_lab.py  test_baseline.py  test_baseline_cli.py  test_behavior_attribution.py  test_behavior_attribution_freshness.py  test_behavior_attribution_standalone.py  test_behavior_attribution_trace.py  test_behavior_attribution_validate.py  test_behavior_coverage.py  test_behavior_coverage_duplicates.py  test_behavior_coverage_outlines.py  test_behavior_coverage_parser_edges.py  test_behavior_coverage_zeroconfig.py  test_cli.py  test_config.py  test_config_mutation_mode.py  test_crap_blocking.py  test_crash_boundary.py  test_crash_payload.py  test_crash_prompt.py  test_crash_storage.py  test_crash_transport.py  test_defaults_path.py  test_detect.py  test_detect_acceptance.py  test_git.py  test_github_action.py  test_init.py  test_lintfix_budgets.py  test_lintfix_classify.py  test_lintfix_diff.py  test_lintfix_discover.py  test_lintfix_e2e_runner.py  test_lintfix_eof_newline.py  test_lintfix_escrow.py  (+22 more)
tests/features/: harness_cli.feature  harness_doctor.feature  harness_init.feature  harness_meta.feature  harness_stages.feature  harness_tasks.feature  interlock_agents.feature  interlock_cli.feature  interlock_crash.feature  interlock_doctor.feature  interlock_fix.feature  interlock_greenfield.feature  interlock_meta.feature  interlock_stages.feature  interlock_tasks.feature
tests/reports/: test_suppressions.py
tests/stages/: test_check.py  test_ci.py  test_clean.py  test_post_edit.py  test_pre_commit.py  test_setup_hooks.py  test_setup_hooks_integration.py
tests/step_defs/: conftest.py  test_harness_cli.py  test_harness_doctor.py  test_harness_init.py  test_harness_meta.py  test_harness_stages.py  test_harness_tasks.py  test_interlock_agents.py  test_interlock_cli.py  test_interlock_crash.py  test_interlock_doctor.py  test_interlock_fix.py  test_interlock_greenfield.py  test_interlock_init.py  test_interlock_meta.py  test_interlock_stages.py  test_interlock_tasks.py
tests/tasks/: test_acceptance.py  test_arch.py  test_audit.py  test_complexity.py  test_coverage.py  test_crap.py  test_deps.py  test_doctor.py  test_evaluate.py  test_fix.py  test_format.py  test_format_check.py  test_init.py  test_init_acceptance.py  test_lint.py  test_mutation.py  test_setup.py  test_stats.py  test_test.py  test_typecheck.py  test_version.py  test_warm.py
tools/: adoption_friction_lib.py  create_lintfix_playground.py  lintfix_playground_lib.py  run_adoption_friction_lab.py  run_lintfix_e2e.py
website/: index.html  vercel.json
website/src/: routeTree.gen.ts  styles.css
website/src/components/: markdown.tsx
website/src/content/: docs.tsx  en.tsx
website/src/lib/: site.ts
website/src/routes/: __root.tsx  index.tsx
website/src/routes/docs/: index.tsx
website/src/styles/: editorial.css
