[project]
name = "pyharness"
version = "0.1.0"
description = "Zero-config Python quality harness: lint, format, typecheck, test, coverage, acceptance, audit, deps, architecture, complexity, CRAP, mutation — all behind `harness <task>`."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.39.3",
    "coverage>=7.13.5",
    "deptry>=0.25.1",
    "import-linter>=2.11",
    "lizard>=1.21.6",
    # Pinned to main until >3.5.0 ships with the set_start_method guard (mutmut#466).
    "mutmut @ git+https://github.com/boxed/mutmut.git@e31d923c734383ddb7df4aa439ab3c60fd7d629a",
    "pip-audit>=2.7",
    "ruff>=0.15.11",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "harness"
# Ensure bundled default configs (ruff.toml, coveragerc, pyrightconfig.json,
# importlinter_template.ini, mutmut.toml) ship in the sdist. uv_build already
# includes non-.py files under the module dir in wheels; this line makes the
# sdist behaviour explicit too.
source-include = ["harness/defaults/**"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-bdd>=8.1",
]

# ── Harness (self-config; all keys optional — defaults come from auto-detect) ──

[tool.harness]
src_dir = "harness"
test_dir = "tests"
test_runner = "pytest"
test_invoker = "python"
pytest_args = ["-q"]

# Mutation gate (nightly). 67.9% baseline 2026-04-23; ratchet up as tests close
# gaps in harness.tasks / harness.detect / harness.stages.
mutation_min_score = 65.0

# ── Ruff (lint + format) ────────────────────────────────────────────

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that take multiple seconds (deselect with -m 'not slow')",
]

[tool.ruff]
target-version = "py313"
line-length = 99
preview = true
# harness/defaults/ holds bundled data files (templates copied into user
# projects); they're not pyharness source and ship their own ruff config.
extend-exclude = ["harness/defaults"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify (simple > complex)
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "TCH",  # type-checking imports
    "ARG",  # unused arguments
    "PL",   # pylint subset
    "ANN",  # type annotations
    "ERA",  # flake8-eradicate (commented-out code)
    "PIE",  # flake8-pie (unnecessary placeholders)
    "S",    # flake8-bandit (security)
]
ignore = [
    "ANN401",   # dynamically-typed-expressions (Any)
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-local-variables
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional-arguments
    "PLR2004",  # magic-value-comparison (too noisy)
    "PLR6201",  # use-set-literal
    "PLR6301",  # method-could-be-function
]

[tool.ruff.lint.per-file-ignores]
"harness/runner.py" = [
    "S404",     # subprocess module import (intentional — task runner)
    "S603",     # subprocess call without shell=true check (intentional)
    "S607",     # partial executable path (intentional — tools co-installed with harness)
]
"harness/git.py" = [
    "S404",     # subprocess module import (intentional — git wrapper)
    "S603",     # subprocess call without shell=true check (intentional)
    "S607",     # partial executable path (intentional — git on PATH)
]
"harness/tasks/crap.py" = [
    "S404",     # subprocess module import (intentional — invokes coverage/lizard)
    "S603",     # subprocess call without shell=true check (intentional)
    "S607",     # partial executable path (intentional — tools co-installed with harness)
    "S405",     # xml.etree import (we parse coverage.xml generated by coverage.py — trusted)
    "S314",     # xml.etree.parse on our own coverage output — trusted input
]
"harness/tasks/mutation.py" = [
    "S404",     # subprocess module import (intentional — invokes mutmut)
    "S603",     # subprocess call without shell=true check (intentional)
    "S607",     # partial executable path (intentional — tools co-installed with harness)
    "S405",     # xml.etree import (we parse coverage.xml — trusted)
    "S314",     # xml.etree.parse on our own coverage output — trusted input
]
"tests/**/*.py" = [
    "ANN",      # type annotations relaxed in tests
    "ARG",      # unused arguments common in fixtures
    "PLC0415",  # late imports fine in tests
    "PLC1901",  # compare-to-empty-string
    "PLC2701",  # private-name-import (testing internal behavior)
    "PIE810",   # single-starts-ends-with
    "PLR2004",  # magic values fine in tests
    "RUF069",   # float equality comparisons fine in tests
    "S101",     # assert usage (unittest uses self.assert*, but keep for flexibility)
    "S404",     # subprocess import (intentional — integration tests invoke the CLI)
    "S603",     # subprocess call without shell=true check (intentional)
    "SIM105",   # contextlib.suppress suggestion
    "TCH",      # type-checking imports (fixtures need runtime types)
]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

# ── Basedpyright ───────────────────────────────────────────────────

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAny = false

# ── Coverage ───────────────────────────────────────────────────────

[tool.coverage.run]
source = ["harness"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

# ── Mutmut (advisory) ──────────────────────────────────────────────

[tool.mutmut]
paths_to_mutate = ["harness/"]
tests_dir = ["tests/"]

# ── Deptry ─────────────────────────────────────────────────────────
# These tools ship as CLIs we invoke via subprocess — not imported — so deptry
# can't see the usage on its own.

[tool.deptry]
# Bundled templates ship as data files and import target-project deps
# (pytest-bdd, etc.) that pyharness itself doesn't ship with.
extend_exclude = ["harness/defaults"]

[tool.deptry.per_rule_ignores]
DEP002 = ["basedpyright", "coverage", "deptry", "import-linter", "lizard", "mutmut", "pip-audit", "ruff"]

# ── Import-Linter ──────────────────────────────────────────────────
# Declaring explicit contracts overrides the default (src ↛ tests) that
# `harness arch` synthesizes otherwise.

[tool.importlinter]
root_packages = ["harness", "tests"]

[[tool.importlinter.contracts]]
name = "Production does not import tests"
type = "forbidden"
source_modules = ["harness"]
forbidden_modules = ["tests"]

[[tool.importlinter.contracts]]
name = "Tasks are primitives — stages compose them, not the other way"
type = "forbidden"
source_modules = ["harness.tasks"]
forbidden_modules = ["harness.stages"]
